<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registrou"
    tools:context=".RegistrouActivity">

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="287dp"
        android:layout_height="50dp"
        android:background="@drawable/bordertxtc"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/txt_nombre"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textColorHighlight="@color/cafe_oscuro"
        android:textColorHint="@color/cafe_oscuro"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <EditText
        android:id="@+id/txt_apellido"
        android:layout_width="287dp"
        android:layout_height="50dp"
        android:background="@drawable/bordertxtc"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/txt_Apellido"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textColorHighlight="@color/cafe_oscuro"
        android:textColorHint="@color/cafe_oscuro"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

    <EditText
        android:id="@+id/txt_identificacion"
        android:layout_width="287dp"
        android:layout_height="50dp"
        android:background="@drawable/bordertxtc"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/txt_identificacion"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textColorHighlight="@color/cafe_oscuro"
        android:textColorHint="@color/cafe_oscuro"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <EditText
        android:id="@+id/txt_fecha"
        android:layout_width="287dp"
        android:layout_height="50dp"
        android:background="@drawable/bordertxtc"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/txt_fecha"
        android:inputType="none"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textColorHighlight="@color/cafe_oscuro"
        android:textColorHint="@color/cafe_oscuro"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <EditText
        android:id="@+id/txt_contraseñau"
        android:layout_width="287dp"
        android:layout_height="50dp"
        android:background="@drawable/bordertxtc"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/txt_contrasena"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textColorHighlight="@color/cafe_oscuro"
        android:textColorHint="@color/cafe_oscuro"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

    <EditText
        android:id="@+id/txt_contraseñauR"
        android:layout_width="287dp"
        android:layout_height="50dp"
        android:background="@drawable/bordertxtc"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/txt_Rcontraseña"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textColorHighlight="@color/cafe_oscuro"
        android:textColorHint="@color/cafe_oscuro"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756" />

    <EditText
        android:id="@+id/editTextGenero"
        android:layout_width="287dp"
        android:layout_height="50dp"
        android:background="@drawable/bordertxtc"
        android:clickable="true"
        android:focusable="false"
        android:fontFamily="casual"
        android:hint="Género"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textColorHighlight="@color/cafe_oscuro"
        android:textColorHint="@color/cafe_oscuro"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593" />

    <EditText
        android:id="@+id/txt_correou"
        android:layout_width="287dp"
        android:layout_height="50dp"
        android:background="@drawable/bordertxtc"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/txt_correo"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/cafe_oscuro"
        android:textColorHighlight="@color/cafe_oscuro"
        android:textColorHint="@color/cafe_oscuro"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="188dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/cafe_oscuro"
        android:fontFamily="casual"
        android:hint="@string/btn_registrar"
        android:textColor="@color/blanco"
        android:textColorHighlight="@color/blanco"
        android:textColorHint="@color/blanco"
        android:textColorLink="@color/blanco"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />

    <Button
        android:id="@+id/btncuenta"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/btn_cuentaya"
        android:textColor="@color/blanco"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>